--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,12 @@
     <string name="calendar">Calendar</string>
     <string name="passenger">Passenger</string>
     <string name="next">Next</string>
+    <string name="rb_aimag">Орон нутаг</string>
+    <string name="start_stop_aimag">Орон нутаг /Аймаг, Дүүрэг/</string>
+    <string name="start_stop_foreign">Улс</string>
+    <string name="start_stop">Сум</string>
+    <string name="start_stop_city">Хот</string>
+    <string name="center">Аймгийн төв</string>
 
 
 </resources>
