--- a/app/src/main/res/values-mn/strings.xml
+++ b/app/src/main/res/values-mn/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="app_name">Gerege</string>
     <string name="back">Буцах</string>
-    <string name="bus"></string>
+    <string name="bus">Автобус</string>
 </resources>
